--- a/kontakt.html
+++ b/kontakt.html
@@ -124,19 +124,19 @@
             <div>
                 <figure>
                     <figcaption>
-                        <img src="assets/images/loc.png" alt="loc-img">
+                        <img src="assets/images/loc-img.png" alt="loc-img">
                     </figcaption>
                     <p>Haveje 33-35 1840 Avedøre</p>
                 </figure>
                 <figure>
                     <figcaption>
-                        <img src="assets/images/phone.png" alt="phone-img">
+                        <img src="assets/images/phone-img.png" alt="phone-img">
                     </figcaption>
                     <p>55 33 23 16</p>
                 </figure>
                 <figure>
                     <figcaption>
-                        <img src="assets/images/mail.png" alt="mail-img">
+                        <img src="assets/images/mail-img.png" alt="mail-img">
                     </figcaption>
                     <p>Biograften@mail.dk</p></br>
                 </figure>
