--- a/arrangementer.html
+++ b/arrangementer.html
@@ -13,7 +13,6 @@
 </head>
 <body>
     <header>
-        <!-- zxdcks -->
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         viewBox="0 0 400 400" enable-background="new 0 0 400 400" xml:space="preserve">
         <path d="M200.7,156.7c-9.3-8.4-32.3,2-51.3,23.2c-19,21.2-27,45.1-17.7,53.5c3.9,3.5,10.1,3.7,17.5,1.2c3.2-1.1,6.6-2.6,10.1-4.6
@@ -121,7 +120,7 @@
     <section id="eventsMain">
         <figure>
             <figcaption>
-                <img src="assets/images/kids.jpg" alt="">
+                <img src="assets/images/kids.jpg" alt="kids-img">
             </figcaption>
             <article>
                 <h3>Til Børn</h3>
@@ -138,12 +137,12 @@
                 </p>
             </article>
             <figcaption>
-                <img src="assets/images/girls-watching-boring-movie-cinema-theater-bad-film-179038470.jpg" alt="">
+                <img src="assets/images/girls-watching-boring-movie-cinema-theater-bad-film-179038470.jpg" alt="adoult-img">
             </figcaption>
         </figure>
         <figure>
             <figcaption>
-                <img src="assets/images/old.png" alt="">
+                <img src="assets/images/old.png" alt="old-img">
             </figcaption>
             <article>
                 <h3>For Senior (65+)</h3>
