--- a/arrangementer.html
+++ b/arrangementer.html
@@ -118,6 +118,7 @@
     <main>
     <!-- SECTION ONE -->
     <section id="eventsMain">
+        <h2>Arrangementer</h2>
         <figure>
             <figcaption>
                 <img src="assets/images/kids.jpg" alt="kids-img">
@@ -185,7 +186,7 @@
       <a href="#"><i class="far fa-copyright"></i> 2021 Gruppe 1</a>
       <a href="#">Jeppe - Maria - Tordis</a>
   </footer>
-  <script>
+  <!-- <script>
     const spBtn = document.querySelectorAll('.spBtn');  
     let specialText = document.querySelectorAll('p');
     for(let element of specialText) {
@@ -197,6 +198,6 @@
 }
 
 
-  </script>
+  </script> -->
 </body>
 </html>
