--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
     <main>
     <!-- SECTION ONE -->
     <section id="TopMovies">
+        <h2>Top Film</h2>
       <figure>
       <figcaption>
-          <h2>Top Film</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto magni quo commodi tempore similique voluptate vel unde in. Perspiciatis numquam vitae quos aspernatur minima voluptates alias, consectetur rem! Dolor, quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
           <p>Quae quia dolorum sint error repellat corrupti enim voluptatum pariatur. Id placeat quo deleniti in officia illo beatae nesciunt tenetur, unde vitae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum illo omnis fugiat provident, doloremque porro tempora modi voluptate obcaecati repellat nesciunt fugit consequatur placeat? Iure eligendi accusantium amet incidunt ex.</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quibusdam atque voluptatem? Deleniti repellendus amet iste error ea maxime eligendi iure. Ipsam soluta libero perspiciatis ipsum esse nisi id accusamus.
           </p>
           <button type="button">
-              <a href="#">Køb biletter</a>
+              <a href="bestilbillet.html#Main-background">Køb biletter</a>
           </button>
       </figcaption>
       <div id="topMoviesWrapper">
@@ -134,7 +134,7 @@
               <img src="assets/images/Poster-Ida.jpg" alt="poster-of-movie-Ida">
               <img src="assets/images/Poster-Riot.jpg" alt="poster-of-movie-Riot">
           </div>
-              <video src="assets/media/Citizenfour.mp4"></video>
+              <video controls autoplay muted src="assets/media/Citizenfour.mp4"></video>
           
       </div>
   </figure>
@@ -148,12 +148,12 @@
       </article>
       <figure id="movieWrapper">
           <div class="item-1"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-2"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-3"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-4"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
+          <div class="item-2"><img src="assets/images/Poster-Ida.jpg" alt="poster-of-movie-Citezen-Four"></div>
+          <div class="item-3"><img src="assets/images/Poster-Riot.jpg" alt="poster-of-movie-Citezen-Four"></div>
+          <div class="item-4"><img src="assets/images/Poster-Trash.jpg" alt="poster-of-movie-Citezen-Four"></div>
           <div class="item-5"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-6"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-7"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
+          <div class="item-6"><img src="assets/images/Poster-Ida.jpg" alt="poster-of-movie-Citezen-Four"></div>
+          <div class="item-7"><img src="assets/images/Poster-Riot.jpg" alt="poster-of-movie-Citezen-Four"></div>
       </figure>
 
   </section>
