--- a/tilmeld.html
+++ b/tilmeld.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/nav.css">
     <link rel="stylesheet" href="assets/css/tilmeld.css">
     <script src="assets/js/script.js" defer></script>
+    <script src="assets/js/signup.js" defer></script>
 </head>
 <body>
     <header>
@@ -137,7 +138,7 @@
                         <div>
                             <textarea type="message" placeholder="Besked"></textarea>
                         </div>
-                            <p id="error-wrapper" style="color: red "></p>
+                            <p id="signError-wrapper" style="color: red "></p>
                         <div class="button-main">
                             <button type="submit" id="signupbtn">Tilmeld</button>
                         </div>
