--- a/bestilbillet.html
+++ b/bestilbillet.html
@@ -105,7 +105,7 @@
                         </div> 
                     <li><a href="arrangementer.html">Arrangementer</a></li>
                     <ul class="dropdown">
-                        <li> <a href="#"> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
+                        <li> <a href="omBiograf.html"> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
                         <div class="dropdown-content">
                           <a href="#">Faciliteterne</a>
                           <a href="#">Salene</a>
@@ -131,12 +131,12 @@
                                     <h4>Citizenfour</h4>
                                     <p>SAL 1</p>
                                 </div>
-                                <button class="btn"> Lær mere!</button>
+                                <button class="btn"> Læs mere!</button>
                             </div>
                             <article class="hidden-msg">
                                 <p>Dokumentarfilmen 'Citizenfour' handler om whistlebloweren Edward Snowden. Dokumentaristen Laura Poitras, var med helt fra starten og portrætterer Snowden gennem adskillige møder med ham.</p>
                                 <p>Filmen tager sin begyndelse da Poitras flyver til Hong Kong, for at møde manden bag en række anonyme mails hun har modtaget. Det eneste de var underskrevet med var: citizen four. Han var klar til at afsløre hvordan NSA m.fl. benyttede sig af skjult overvågning.</p>
-                                <button class="billetBtn"><a href="#test">Bestil billet</a></button>
+                                <button class="billetBtn"><a href="#seatSelection">Bestil billet</a></button>
                             </article>
                         </li>
                 </ul>
@@ -149,22 +149,17 @@
                                 <h4>The Riot Club</h4>
                                 <p>SAL 1</p>
                             </div>
-                            <button class="btn"> Lær mere!</button>
+                            <button class="btn"> Læs mere!</button>
                         </div>        
                         <article class="hidden-msg">
                             <p>Filmen 'The Riot Club' handler om en berygtet og prestigefyldt klub på Oxford Universitet, der udelukkende består af unge mænd fra overklassen.</p>
                             <p>De to førsteårsstuderende, Alistair Ryle og Miles Richards, optages begge i det eksklusive selskab, men med vidt forskellige intentioner. Hvor Miles ønsker at danne nye venskaber på tværs af klasseskellet, er Alistair langt mere konservativt indstillet.</p>
                             <p>Mændenes uenigheder sættes især på prøve, da de deltager i et rituelt festmåltid med formål at overgå fortidens udskejelser. De andre medlemmer er kendte for at feste hæmningsløst igennem uden skyggen af hensyn til den virkelige verden, og da alkoholen flyder, og følelser får frit spil, tager aftenen en meget alvorlig og ganske uventet drejning.</p>
-                            <button class="billetBtn"><a href="#test">Bestil billet</a></button>
+                            <button class="billetBtn"><a href="#seatSelection">Bestil billet</a></button>
                         </article>
                     </li>
                 </ul>
             </div>
-                        </article>
-                    </li>
-                </ul>
-            </div>
-        
             <div class="Movie" id="Movie-3">
                 <ul>
                     <li>
@@ -173,15 +168,15 @@
                             <h4>IDA</h4>
                             <p>SAL 2</p>
                         </div>
-                        <button class="btn"> Lær mere!</button>
+                        <button class="btn"> Læs mere!</button>
                     </div>
                     <article class="hidden-msg">
                         <p>Det polske drama 'Ida' handler om en 17-årig pige, der i 1960ernes Polen er på vej til at blive nonne.</p> 
                         <p>Ida er mere eller mindre vokset op på klostret og har ingen kontakt til sin familie. Alligevel føler den unge novice et stærkt behov for at opsøge sin eneste slægtning, morens søster Wanda, før hun tager sit klosterløfte. </p>
                         <p>Mosteren besidder en magtfuld stilling som højesteretsdommer, men lever derudover et lettere alkoholiseret og løssluppent liv langt fra Idas puritanske hverdag. Hun har gang på gang afvist sin nieces ønske om at komme på besøg, og da Ida pludseligt står uden for døren med et kors om halsen, og en beskeden bagage under armen, lukker Wanda hende modvilligt ind. </p>
-                        <button class="billetBtn"><a href="#test">Køb Billet!</a></button>
+                        <button class="billetBtn"><a href="#seatSelection">Køb Billet!</a></button>
                     </article>
-                </li>
+                    </li>
                 </ul>
             </div>
             <div class="Movie" id="Movie-4">
@@ -192,20 +187,20 @@
                                 <h4>Trash</h4>
                                 <p>SAL 2</p>
                             </div>
-                            <button class="btn"> Lær mere!</button>
+                            <button class="btn"> Læs mere!</button>
                         </div>
  
                         <article class="hidden-msg">
                             <p>Filmen ’Trash’ foregår i det fattige Brasilien og handler om den forældreløse dreng Raphael, der lever af at rode skrald igennem i håbet om at finde noget af værdi.</p>
                             <p>En dag gør Raphael sig et usædvanligt fund, da han finder en rød pung, men snart er han på flugt fra det lokale politi. Det viser sig nemlig, at den røde pung indeholder hemmelige oplysninger om landets magtfulde politikere.</p>
-                            <button class="billetBtn"><a href="#test">Bestil billet</a></button>
+                            <button class="billetBtn"><a href="#seatSelection">Bestil billet</a></button>
                         </article>
                     </li>
                 </ul>
             </div>
         </section>
 <!-- section 2 -->
-        <section id="test">
+        <section id="seatSelection">
             <div class="movie-container">
                 <label>
                     Vælg En Film:
