--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                           </div>
                         </div> 
                     <li><a href="arrangementer.html">Arrangementer</a></li>
-                    <ul class="dropdown">
-                        <li> <a href=""> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
-                        <div class="dropdown-content">
-                          <a href="#">Faciliteterne</a>
-                          <a href="#">Salene</a>
-                        </div>
-                      </ul> 
+                        <div class="dropdown">
+                            <li> <a href="omBiograf.html"> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
+                            <div class="dropdown-content">
+                                <a href="#">Faciliteterne</a>
+                                <a href="#">Salene</a>
+                            </div>
+                        </div> 
                     <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
@@ -147,13 +147,13 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perferendis fugit rem officiis perspiciatis, neque a. Non, voluptatem nam ex cum sit accusamus modi labore minus, ea aperiam fugit. Quibusdam.</p>
       </article>
       <figure id="movieWrapper">
-          <div class="item-1"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-2"><img src="assets/images/Poster-Ida.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-3"><img src="assets/images/Poster-Riot.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-4"><img src="assets/images/Poster-Trash.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-5"><img src="assets/images/Poster-Citizenfour.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-6"><img src="assets/images/Poster-Ida.jpg" alt="poster-of-movie-Citezen-Four"></div>
-          <div class="item-7"><img src="assets/images/Poster-Riot.jpg" alt="poster-of-movie-Citezen-Four"></div>
+          <div class="item-1"><img src="assets/images/Poster-Trash2.jpg" alt="poster-of-movie-trash"></div>
+          <div class="item-2"><img src="assets/images/Poster-Ida.jpg" alt="poster-of-movie-ida"></div>
+          <div class="item-3"><img src="assets/images/Poster-Riot.jpg" alt="poster-of-movie-the-riot-club"></div>
+          <div class="item-4"><img src="assets/images/Poster-Trash.jpg" alt="poster-of-movie-trash"></div>
+          <div class="item-5"><img src="assets/images/kidsMovie.jpg" alt="poster-of-movie-kidsmovie"></div>
+          <div class="item-6"><img src="assets/images/Poster-Ida2.jpg" alt="poster-of-movie-ida"></div>
+          <div class="item-7"><img src="assets/images/Poster-Citizenfour2.jpg" alt="poster-of-movie-Citezen-Four"></div>
       </figure>
 
   </section>
