--- a/omBiograf.html
+++ b/omBiograf.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="dk">
 <head>
+    <title>Biografen</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biograften</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/nav.css">
-    <link rel="stylesheet" href="assets/css/kontakt.css">
     <script src="assets/js/script.js" defer></script>
+    <link rel="stylesheet" href="assets/css/omBiograf.css">
+    <link rel="stylesheet" href="assets/css/nav.css">
 </head>
 <body>
     <header>
@@ -116,60 +114,108 @@
             <img id="slider" src="" title="" />
     </header>
     <main>
-    <!-- SECTION ONE -->
-    <section>
-        <h2>Kontakt os</h2>
-        <!-- Map -->
-        <article id="contactMain">
+    <section id="About">
+        <h2 id="AboutTxt">Omkring Biografen</h2>
+        <div class="flex-box">
+            <img src="assets/images/Haslev_Bio_643116a.jpg" class="AboutImg">
+ 
             <div>
-                <figure>
-                    <figcaption>
-                        <img src="assets/images/loc-img.png" alt="loc-img">
-                    </figcaption>
-                    <p>Haveje 33-35 1840 Avedøre</p>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <img src="assets/images/phone-img.png" alt="phone-img">
-                    </figcaption>
-                    <p>55 33 23 16</p>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <img src="assets/images/mail-img.png" alt="mail-img">
-                    </figcaption>
-                    <p>Biograften@mail.dk</p></br>
-                </figure>
-                <h6>Forestillinger:</h6>
-                <span>
-                    <p>Første Forestilling</p>
-                    <p>16.15 - 18.00</p> 
-                </span>
-                <span>
-                    <p>Anden Forestilling</p>  
-                    <p>18.30 - 21.00</p>
-                </span>
-                <span>
-                    <p>Tredje Forestilling</p> 
-                    <p>21.15 - 22.00</p>
-                </span>
-                <span>
-                    <p>Fredag, Lørdag, Midnat</p> 
-                    <p>22.30 - 02.00</p>
-                </span>
-                <span>
-                <p>Senior Bio: Mandag til Torsdag </p>
-                   <p> 14.00 - 16.00</p>
-                </span></br>
-                <p>* Telefonen åbener 30 min før dagens første forestilling.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum amet, rerum delectus, ex fugit pariatur qui animi veniam officia ea corporis cupiditate ullam inventore vero, consectetur ducimus. Atque neque animi perferendis maiores doloremque aperiam, voluptatibus optio earum excepturi recusandae deserunt minus commodi pariatur, dolorem rerum dolorum laboriosam quod sequi repellat, reiciendis amet. Totam, accusamus quidem, numquam non quos sunt voluptatem earum dolor dignissimos molestias reprehenderit. Iure modi tempora autem fuga, alias numquam provident, beatae dolore suscipit obcaecati nobis ducimus fugit? Unde, explicabo libero doloremque nihil cumque eaque tempore sed iure est ipsam quibusdam, laboriosam blanditiis. Facere officiis deleniti repellendus saepe?</p>
             </div>
-            <iframe id="map" src="https://www.openstreetmap.org/export/embed.html?bbox=12.439334392547607%2C55.628150410321645%2C12.448990345001222%2C55.6330078940209&amp;layer=mapnik&amp;marker=55.63057922743714%2C12.444162368774414"></iframe>
-        </article>
+        </div>
+ 
+        <div class="flex-box" id="flex-rvs">
+            <img src="assets/images/MicrosoftTeams-image.png" class="AboutImg">
+ 
+            <div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum amet, rerum delectus, ex fugit pariatur qui animi veniam officia ea corporis cupiditate ullam inventore vero, consectetur ducimus. Atque neque animi perferendis maiores doloremque aperiam, voluptatibus optio earum excepturi recusandae deserunt minus commodi pariatur, dolorem rerum dolorum laboriosam quod sequi repellat, reiciendis amet. Totam, accusamus quidem, numquam non quos sunt voluptatem earum dolor dignissimos molestias reprehenderit. Iure modi tempora autem fuga, alias numquam provident, beatae dolore suscipit obcaecati nobis ducimus fugit? Unde, explicabo libero doloremque nihil cumque eaque tempore sed iure est ipsam quibusdam, laboriosam blanditiis. Facere officiis deleniti repellendus saepe?</p>
+            </div>
+        </div>
     </section>
-    </main>
-  <footer>
-      <a href="#"><i class="far fa-copyright"></i> 2021 Gruppe 1</a>
-      <a href="#">Jeppe - Maria - Tordis</a>
-  </footer>
+    
+    <section id="Faciliteter">
+        <div id="txt-fac">
+            <h2>Faciliteter</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti eligendi cupiditate dolore </p>
+        </div>
+ 
+        <section id="fac-flex">
+            <section class="fac">
+                <div>
+                    <div>
+                        <img src="assets/images/Biograf1_About.jpg" alt="" class="fac-img">
+                    </div>
+ 
+                    <div id="fac-txt">
+                        <h3>Biografen</h3>
+                        <button class="AboutBtn"> Læs mere</button>
+                    </div>
+ 
+                    <div class="icon-flex">
+                        <img src="/img/linkin icon" alt="" class="icon">
+                        <img src="/img/twitter icon" alt="" class="icon">
+                    </div>
+                </div>
+            </section>
+ 
+            <section class="fac">
+                <div>
+                    <div>
+                        <img src="assets/images/biograf2_About.jpg" alt="" class="fac-img">
+                    </div>
+ 
+                    <div id="fac-txt">
+                        <h3>privat</h3>
+                        <button class="AboutBtn"> Læs mere</button>
+                    </div>
+ 
+                    <div class="icon-flex">
+                        <img src="/img/linkin icon" alt="" class="icon">
+                        <img src="/img/twitter icon" alt="" class="icon">
+                    </div>
+                </div>
+            </section>
+ 
+            <section class="fac">
+                <div>
+                    <div>
+                        <img src="assets/images/Sal01_About.jpg" alt="" class="fac-img">
+                    </div>
+ 
+                    <div id="fac-txt">
+                        <h3>sal 1</h3>
+                        <button class="AboutBtn"> Læs mere</button>
+                    </div>
+ 
+                    <div class="icon-flex">
+                        <img src="/img/linkin icon" alt="" class="icon">
+                        <img src="/img/twitter icon" alt="" class="icon">
+                    </div>
+                </div>
+            </section>
+ 
+            <section class="fac">
+                <div>
+                    <div>
+                        <img src="assets/images/mennekser_About.jpg" alt="" class="fac-img">
+                    </div>
+ 
+                    <div id="fac-txt">
+                        <h3>Skole</h3>
+                        <button class="AboutBtn"> Læs mere</button>
+                    </div>
+ 
+                    <div class="icon-flex">
+                        <img src="/img/linkin icon" alt="" class="icon">
+                        <img src="/img/twitter icon" alt="" class="icon">
+                    </div>
+                </div>
+            </section>
+        </section>
+    </section>
+</main>
+<footer>
+    <a href="#"><i class="far fa-copyright"></i> 2021 Gruppe 1</a>
+    <a href="#">Jeppe - Maria - Tordis</a>
+</footer>
 </body>
-</html>
