--- a/tilmeld.html
+++ b/tilmeld.html
@@ -105,7 +105,7 @@
                         </div> 
                     <li><a href="arrangementer.html">Arrangementer</a></li>
                     <ul class="dropdown">
-                        <li> <a href=""> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
+                        <li> <a href="omBiograf.html"> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
                         <div class="dropdown-content">
                           <a href="#">Faciliteterne</a>
                           <a href="#">Salene</a>
