--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 
   </section>
   </main>
+  <!-- FOOTER -->
   <footer>
       <a href="#"><i class="far fa-copyright"></i> 2021 Gruppe 1</a>
       <a href="#">Jeppe - Maria - Tordis</a>
