--- a/aboutBio.html
+++ b/aboutBio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biografen</title>
     <link rel="stylesheet" href="assets/css/nav.css">
+    <link rel="stylesheet" href="assets/css/aboutUs.css">
     <script src="assets/js/script.js" defer></script>
 </head>
 <body>
@@ -118,10 +119,57 @@
         <h2>About Us</h2>
         <figure>
             <figcaption>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ad, ipsa esse non consequatur doloremque illum veritatis perspiciatis, eum, cum aperiam atque fugiat tempora pariatur iusto dolores ab. Omnis, consequatur!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus minus dignissimos adipisci ex labore amet! Cum eum, totam vitae ea temporibus alias, reprehenderit velit maxime eaque cupiditate quibusdam voluptates vero!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nobis magni dolore cumque dolores perferendis voluptas officiis repellat. Doloremque quos quibusdam magnam, ad quaerat fugit molestias incidunt mollitia laboriosam delectus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero sunt nihil aut itaque officia hic omnis minima quis? Dolorem quae sunt eveniet ratione nobis cupiditate sapiente expedita deserunt, voluptates consectetur. Doloremque quos quibusdam magnam, ad quaerat fugit molestias incidunt mollitia laboriosam delectus?</p>
             </figcaption>
-            <img src="" alt="">
+            <img src="assets/images/couple-enjoying-movie-cinema.jpg" alt="couple-at-the-cinema">
+        </figure>
+        <figure>
+            <img src="assets/images/happy-family-1.jpg" alt="happy-family-at-the-cinema">
+            <figcaption>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias nobis magni dolore cumque dolores perferendis voluptas officiis repellat. Doloremque quos quibusdam magnam, ad quaerat fugit molestias incidunt mollitia laboriosam delectus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero sunt nihil aut itaque officia hic omnis minima quis? Dolorem quae sunt eveniet ratione nobis cupiditate sapiente expedita deserunt, voluptates consectetur. Doloremque quos quibusdam magnam, ad quaerat fugit molestias incidunt mollitia laboriosam delectus?</p>
+            </figcaption>
+        </figure>
+    </section>
+    <section id="aboutFaciliteter">
+        <h2>Faciliteter</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <figure>
+            <img src="assets/images/Biograf1_About.jpg" alt="image-of-cinema">
+            <figcaption>
+                <article>
+                    <h6>Privat Sal</h6>
+                    <button>Læs mere</button>
+                </article>
+            </figcaption>
+        </figure>
+        <figure>
+            <img src="assets/images/biograf2_About.jpg" alt="">
+            <figcaption>
+                <article>
+                    <h6>Café</h6>
+                    <button>Læs mere</button>
+                </article>
+            </figcaption>
+        </figure>
+        <figure>
+            <img src="assets/images/Sal01_About.jpg" alt="">
+            <figcaption>
+                <article>
+                    <h6>Sal 1</h6>
+                    <button>Læs mere</button>
+                </article>
+            </figcaption>
+        </figure>
+        <figure>
+            <img src="assets/images/mennekser_About.jpg" alt="">
+            <figcaption>
+                <article>
+                    <h6>Sal 2</h6>
+                    <button>Læs mere</button>
+                </article>
+            </figcaption>
         </figure>
     </section>
     </main>
