--- a/aboutBio.html
+++ b/aboutBio.html
@@ -135,42 +135,44 @@
     <section id="aboutFaciliteter">
         <h2>Faciliteter</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        <figure>
-            <img src="assets/images/Biograf1_About.jpg" alt="image-of-cinema">
+        <article id="figureWrapper">
+            <figure>
+            <img src="assets/images/biograf2_About.jpg" alt="image-of-cinema">
             <figcaption>
                 <article>
                     <h6>Privat Sal</h6>
-                    <button>Læs mere</button>
+                    <button class="aboutBtn">Læs mere</button>
                 </article>
             </figcaption>
-        </figure>
-        <figure>
-            <img src="assets/images/biograf2_About.jpg" alt="">
+            </figure>
+            <figure>
+            <img src="assets/images/cafe01.png" alt="">
             <figcaption>
                 <article>
                     <h6>Café</h6>
-                    <button>Læs mere</button>
+                    <button class="aboutBtn">Læs mere</button>
                 </article>
             </figcaption>
-        </figure>
-        <figure>
+            </figure>
+            <figure>
             <img src="assets/images/Sal01_About.jpg" alt="">
             <figcaption>
                 <article>
                     <h6>Sal 1</h6>
-                    <button>Læs mere</button>
+                    <button class="aboutBtn">Læs mere</button>
                 </article>
             </figcaption>
-        </figure>
-        <figure>
+            </figure>
+            <figure>
             <img src="assets/images/mennekser_About.jpg" alt="">
             <figcaption>
                 <article>
                     <h6>Sal 2</h6>
-                    <button>Læs mere</button>
+                    <button class="aboutBtn">Læs mere</button>
                 </article>
             </figcaption>
-        </figure>
+            </figure>
+        </article>
     </section>
     </main>
     <footer>
