--- a/bestilbillet.html
+++ b/bestilbillet.html
@@ -96,7 +96,7 @@
                     <li><a href="index.html">Forside</a></li>
                     <li><a href="bestilbillet.html">Bestil Billet</a></li>
                         <div class="dropdown">
-                          <li> <a href="tilmeld.html"> Tilmeldning <i class="fa fa-caret-down"></i> </a></li>
+                          <li> <a href="tilmeld.html"> Tilmelding <i class="fa fa-caret-down"></i> </a></li>
                           <div class="dropdown-content">
                             <a href="tilmeld.html#undermenuOne">Arrangementer</a>
                             <a href="tilmeld.html#undermenuTwo">Specialforestillinger</a>
@@ -107,8 +107,8 @@
                     <ul class="dropdown">
                         <li> <a href="omBiograf.html"> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
                         <div class="dropdown-content">
-                          <a href="#">Faciliteterne</a>
-                          <a href="#">Salene</a>
+                          <a href="omBiograf.html#fac-flex">Faciliteterne</a>
+                          <a href="omBiograf.html#fac-flex">Salene</a>
                         </div>
                       </ul> 
                     <li><a href="kontakt.html">Kontakt</a></li>
@@ -215,7 +215,7 @@
             <ul class="showcase">
                 <li>
                     <div class="seat"></div>
-                    <small>N/A</small>
+                    <small>Ledigt</small>
                 </li>
                 <li>
                     <div class="seat occupied"></div>
