--- a/kontakt.html
+++ b/kontakt.html
@@ -95,7 +95,7 @@
                     <li><a href="index.html">Forside</a></li>
                     <li><a href="bestilbillet.html">Bestil Billet</a></li>
                         <div class="dropdown">
-                          <li> <a href="tilmeld.html"> Tilmeldning <i class="fa fa-caret-down"></i> </a></li>
+                          <li> <a href="tilmeld.html"> Tilmelding <i class="fa fa-caret-down"></i> </a></li>
                           <div class="dropdown-content">
                             <a href="tilmeld.html#undermenuOne">Arrangementer</a>
                             <a href="tilmeld.html#undermenuTwo">Specialforestillinger</a>
@@ -106,8 +106,8 @@
                     <ul class="dropdown">
                         <li> <a href="omBiograf.html"> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
                         <div class="dropdown-content">
-                          <a href="#">Faciliteterne</a>
-                          <a href="#">Salene</a>
+                          <a href="omBiograf.html#fac-flex">Faciliteterne</a>
+                          <a href="omBiograf.html#fac-flex">Salene</a>
                         </div>
                       </ul> 
                     <li><a href="kontakt.html">Kontakt</a></li>
@@ -119,7 +119,6 @@
     <!-- SECTION ONE -->
     <section>
         <h2>Kontakt os</h2>
-        <!-- Map -->
         <article id="contactMain">
             <div>
                 <figure>
@@ -163,6 +162,7 @@
                 </span></br>
                 <p>* Telefonen åbener 30 min før dagens første forestilling.</p>
             </div>
+        <!-- Map -->
             <iframe id="map" src="https://www.openstreetmap.org/export/embed.html?bbox=12.439334392547607%2C55.628150410321645%2C12.448990345001222%2C55.6330078940209&amp;layer=mapnik&amp;marker=55.63057922743714%2C12.444162368774414"></iframe>
         </article>
     </section>
