--- a/tilmeld.html
+++ b/tilmeld.html
@@ -96,7 +96,7 @@
                     <li><a href="index.html">Forside</a></li>
                     <li><a href="bestilbillet.html">Bestil Billet</a></li>
                         <div class="dropdown">
-                          <li> <a href="tilmeld.html"> Tilmeldning <i class="fa fa-caret-down"></i> </a></li>
+                          <li> <a href="tilmeld.html"> Tilmelding <i class="fa fa-caret-down"></i> </a></li>
                           <div class="dropdown-content">
                             <a href="tilmeld.html#undermenuOne">Arrangementer</a>
                             <a href="tilmeld.html#undermenuTwo">Specialforestillinger</a>
