--- a/arrangementer.html
+++ b/arrangementer.html
@@ -96,7 +96,7 @@
                     <li><a href="index.html">Forside</a></li>
                     <li><a href="bestilbillet.html">Bestil Billet</a></li>
                         <div class="dropdown">
-                          <li> <a href="tilmeld.html"> Tilmeldning <i class="fa fa-caret-down"></i> </a></li>
+                          <li> <a href="tilmeld.html"> Tilmelding <i class="fa fa-caret-down"></i> </a></li>
                           <div class="dropdown-content">
                             <a href="tilmeld.html#undermenuOne">Arrangementer</a>
                             <a href="tilmeld.html#undermenuTwo">Specialforestillinger</a>
@@ -107,8 +107,8 @@
                     <ul class="dropdown">
                         <li> <a href="omBiograf.html"> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
                         <div class="dropdown-content">
-                          <a href="#">Faciliteterne</a>
-                          <a href="#">Salene</a>
+                          <a href="omBiograf.html#fac-flex">Faciliteterne</a>
+                          <a href="omBiograf.html#fac-flex">Salene</a>
                         </div>
                       </ul> 
                     <li><a href="kontakt.html">Kontakt</a></li>
@@ -138,12 +138,12 @@
                     <span>2. Citizenfour d. 5/11/21</span> 
                 </p>
             </article>
-            <figcaption>
+            <figcaption class="hiddenImg">
                 <img src="assets/images/girls-watching-boring-movie-cinema-theater-bad-film-179038470.jpg" alt="adoult-img">
             </figcaption>
         </figure>
         <figure>
-            <figcaption>
+            <figcaption class="hiddenImg">
                 <img src="assets/images/old.png" alt="old-img">
             </figcaption>
             <article>
