--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <li><a href="index.html">Forside</a></li>
                     <li><a href="bestilbillet.html">Bestil Billet</a></li>
                         <div class="dropdown">
-                          <li> <a href="tilmeld.html"> Tilmeldning <i class="fa fa-caret-down"></i> </a></li>
+                          <li> <a href="tilmeld.html"> Tilmelding <i class="fa fa-caret-down"></i> </a></li>
                           <div class="dropdown-content">
                             <a href="tilmeld.html#undermenuOne">Arrangementer</a>
                             <a href="tilmeld.html#undermenuTwo">Specialforestillinger</a>
@@ -106,8 +106,8 @@
                         <div class="dropdown">
                             <li> <a href="omBiograf.html"> Om Biograften <i class="fa fa-caret-down"></i> </a></li>
                             <div class="dropdown-content">
-                                <a href="#">Faciliteterne</a>
-                                <a href="#">Salene</a>
+                                <a href="omBiograf.html#fac-flex">Faciliteterne</a>
+                                <a href="omBiograf.html#fac-flex">Salene</a>
                             </div>
                         </div> 
                     <li><a href="kontakt.html">Kontakt</a></li>
